refactor(domain): making domain more make sense
