# docs/swagger.json
@@ -882,9 +882,9 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Update the username of the authenticated user.",
+                "description": "Update the bio, image_url, and/or username of the authenticated user.",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -895,13 +895,23 @@
                 "summary": "Update user information",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": "Updated username",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.UpdateUserRequest"
-                        }
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Updated bio (optional)",
+                        "name": "bio",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Updated image (optional)",
+                        "name": "image",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1066,20 +1076,6 @@
                     "type": "string",
                     "minLength": 1,
                     "example": "Had an amazing trip to the mountains!"
-                }
-            }
-        },
-        "request.UpdateUserRequest": {
-            "type": "object",
-            "required": [
-                "username"
-            ],
-            "properties": {
-                "username": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 3,
-                    "example": "john_doe"
                 }
             }
         },
@@ -1402,11 +1398,11 @@
         "response.LoginData": {
             "type": "object",
             "properties": {
-                "refresh_token": {
+                "access_token": {
                     "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                    "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 },
-                "token": {
+                "refresh_token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 }
@@ -1459,9 +1455,9 @@
         "response.RefreshTokenData": {
             "type": "object",
             "properties": {
-                "token": {
+                "access_token": {
                     "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                    "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
                 }
             }
         },
@@ -1573,6 +1569,10 @@
         "response.User": {
             "type": "object",
             "properties": {
+                "bio": {
+                    "type": "string",
+                    "example": "Hi there!"
+                },
                 "created_at": {
                     "type": "string",
                     "example": "2025-01-31T12:00:00Z"
@@ -1584,6 +1584,10 @@
                 "id": {
                     "type": "string",
                     "example": "3d5a8b92-f1c5-4dbe-a2a7-1d9a8c743e9b"
+                },
+                "image_url": {
+                    "type": "string",
+                    "example": "https://example.com/profile.jpg"
                 },
                 "updated_at": {
                     "type": "string",
